# rosette

./: .gitattributes  .gitignore  Cargo.toml  DESIGN.md  README.md  SECURITY.md  TODOS.md
.github/workflows/: ci.yml  ios.yml  release-ios.yml  release-relay.yml
app/: build.gradle.kts  gradle.properties  settings.gradle.kts
app/composeApp/: build.gradle.kts
app/composeApp/src/androidMain/: AndroidManifest.xml
app/composeApp/src/androidMain/kotlin/chat/app/: MainActivity.kt
app/composeApp/src/androidMain/kotlin/chat/app/chatlist/: ClockTime.android.kt
app/composeApp/src/androidMain/kotlin/chat/app/directory/: DirectoryBaseUrl.android.kt  Sha256.android.kt
app/composeApp/src/androidMain/kotlin/chat/app/onboarding/: DialCode.android.kt
app/composeApp/src/androidMain/kotlin/chat/app/session/: SessionStore.android.kt
app/composeApp/src/androidMain/kotlin/chat/app/storage/: DbKeyStore.android.kt
app/composeApp/src/androidMain/res/values/: colors.xml  themes.xml
app/composeApp/src/androidMain/res/values-night/: colors.xml
app/composeApp/src/commonMain/kotlin/chat/app/: App.kt
app/composeApp/src/commonMain/kotlin/chat/app/chatlist/: ChatListScreen.kt  ClockTime.kt  ConversationScreen.kt  VerifyContactScreen.kt
app/composeApp/src/commonMain/kotlin/chat/app/directory/: BackupUploader.kt  DirectoryBaseUrl.kt  DirectoryClient.kt  Sha256.kt
app/composeApp/src/commonMain/kotlin/chat/app/onboarding/: DialCode.kt  Onboarding.kt
app/composeApp/src/commonMain/kotlin/chat/app/pairing/: FindPeopleScreen.kt
app/composeApp/src/commonMain/kotlin/chat/app/session/: SessionStore.kt
app/composeApp/src/commonMain/kotlin/chat/app/settings/: ChangePinScreen.kt  SettingsScreen.kt
app/composeApp/src/commonMain/kotlin/chat/app/storage/: DbKeyStore.kt
app/composeApp/src/commonMain/kotlin/chat/app/theme/: ChatTheme.kt  LucideIcons.kt  Primitives.kt  Rosette.kt
app/composeApp/src/commonTest/kotlin/chat/app/directory/: Sha256Test.kt
app/composeApp/src/commonTest/kotlin/chat/app/onboarding/: DialCodeTest.kt  OnboardingGateTest.kt
app/composeApp/src/desktopMain/kotlin/chat/app/: Main.kt
app/composeApp/src/desktopMain/kotlin/chat/app/directory/: DirectoryBaseUrl.desktop.kt
app/composeApp/src/desktopMain/kotlin/chat/app/session/: SessionStore.desktop.kt
app/composeApp/src/desktopMain/kotlin/chat/app/storage/: DbKeyStore.desktop.kt
app/composeApp/src/desktopTest/kotlin/chat/app/directory/: DirectoryClientErrorTest.kt
app/composeApp/src/desktopTest/kotlin/chat/app/onboarding/: OnboardingFlowUiTest.kt
app/composeApp/src/desktopTest/kotlin/chat/app/storage/: DbKeyStoreTest.kt
app/composeApp/src/iosMain/kotlin/chat/app/: MainViewController.kt
app/composeApp/src/iosMain/kotlin/chat/app/chatlist/: ClockTime.ios.kt
app/composeApp/src/iosMain/kotlin/chat/app/directory/: DirectoryBaseUrl.ios.kt  Sha256.ios.kt
app/composeApp/src/iosMain/kotlin/chat/app/onboarding/: DialCode.ios.kt
app/composeApp/src/iosMain/kotlin/chat/app/session/: SessionStore.ios.kt
app/composeApp/src/iosMain/kotlin/chat/app/storage/: DbKeyStore.ios.kt
app/engine-kt/: build.gradle.kts
app/engine-kt/src/commonTest/kotlin/chat/engine/: FfiSmokeTest.kt
app/engine-kt/src/desktopTest/kotlin/chat/engine/: ListenerSmokeTest.kt
app/gradle/: libs.versions.toml
app/gradle/wrapper/: gradle-wrapper.properties
app/iosApp/: project.yml
app/iosApp/iosApp/: App.swift  ContentView.swift
cli/: Cargo.toml
cli/src/: lib.rs  main.rs  relay_client.rs
cli/tests/: request_pipelining.rs  three_client_convergence.rs  tls_pinning.rs
core/: Cargo.toml
core/src/: backup.rs  identity.rs  lib.rs  pairing.rs  provider.rs  session.rs  storage.rs
core/tests/: session_lifecycle.rs
directory/: Cargo.toml  Dockerfile
directory/deploy/: .env.example  Caddyfile  README.md  directory-stack.service  docker-compose.yml
directory/migrations/: 0001_init.sql  0002_pairing_bootstrap.sql  0003_phone_search_hash.sql  0004_unique_phone_hash.sql  0005_sessions.sql  0006_backups.sql
directory/src/: api.rs  attestation.rs  config.rs  lib.rs  main.rs  ratelimit.rs  search.rs  store.rs  username.rs  verify.rs
directory/tests/: crash_isolation.rs  e2e_search_pairing.rs  e2e_signup.rs  username_lifecycle.rs
docs/: architecture.md  ffi-contract.md  guide-getting-started.md  howto-run-a-relay.md  reference-commands.md  wireframe-v0.html  wireframe-v1.html
docs/design/: design-preview.html
docs/explanation/: architecture.md  project-guide.md
docs/how-to/: chat-from-the-cli.md  run-a-relay.md
docs/plans/: spec-identity-directory.md  spike-t17-anti-enumeration.md  tasks-identity-directory-pivot.md  tasks-ios-app.md
docs/reference/: commands.md  ffi-contract.md
engine/: Cargo.toml
engine/src/: chat_engine.rs  lib.rs  pairing.rs  relay_client.rs  tls.rs
engine/tests/: commit_retry.rs  dedup.rs  persistence.rs  reconnect.rs  relay_restart.rs  request_pipelining.rs  three_client_convergence.rs  tls_pinning.rs
ffi/: Cargo.toml
ffi/src/: lib.rs
ffi/tests/: callback_delivery.rs  persistence_resume.rs
proto/: Cargo.toml
proto/src/: attestation.rs  auth.rs  envelope.rs  error.rs  framing.rs  lib.rs  limits.rs  link.rs  pow.rs  wire.rs
proto/tests/: fuzz_decode.rs
relay/: Cargo.toml  Dockerfile
relay/src/: identity.rs  lib.rs  main.rs  net.rs  state.rs
scripts/: dev.sh
site/: README.md  package-lock.json
site/app/: globals.css  layout.tsx  page.tsx
site/components/: rosette.tsx  theme-provider.tsx  theme-toggle.tsx
site/lib/: rosette.ts
