[workspace]
resolver = "2"
members = ["proto", "core", "relay", "cli", "ffi"]

[workspace.package]
edition = "2021"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
proto = { path = "proto" }
chatcore = { path = "core" }
