[package]
name = "cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "chat-cli"
path = "src/main.rs"

[dependencies]
engine.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive"] }
