[package]
name = "chatcore"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "chatcore"
path = "src/lib.rs"

[dependencies]
proto.workspace = true
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true
tracing.workspace = true
openmls = "0.8.1"
openmls_rust_crypto = "0.5.1"
openmls_memory_storage = "0.5.0"
openmls_basic_credential = "0.5.0"
sha2 = "0.10"
