[package]
name = "chatcore"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "chatcore"
path = "src/lib.rs"

[dependencies]
proto.workspace = true
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true
tracing.workspace = true
openmls = "0.8.1"
openmls_rust_crypto = "0.5.1"
openmls_memory_storage = "0.5.0"
openmls_basic_credential = { version = "0.5.0", features = ["clonable"] }
sha2 = "0.10"
# Recovery crypto (issue #2) — parameters fixed in backup.rs.
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
# Same rusqlite version as relay; the sqlcipher feature wins feature
# unification workspace-wide (relay's unkeyed DBs are unaffected — an
# unkeyed SQLCipher build reads/writes plain SQLite files).
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }

[dev-dependencies]
tempfile = "3"
