[package]
name = "directory"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "directory"
path = "src/main.rs"

[dependencies]
proto.workspace = true
serde.workspace = true
serde_json = "1"
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
anyhow.workspace = true
argon2 = "0.5"
rand = "0.8"
# T27: Ed25519 attestation-token signing (the type/verify live in proto).
ed25519-dalek = "2"
# Recovery-bundle upload bodies (issue #2) — same version as engine/ffi.
base64 = "0.22"
async-trait = "0.1"
# Real client-server DB (Signal/Telegram-style), not embedded SQLite —
# directory is a centrally-run service, unlike relay's per-operator file.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "migrate", "macros"] }
axum = "0.7"
# TwilioOtpVendor (verify.rs). Default (native-tls) backend, same as this
# crate's pre-existing dev-dependency use of reqwest below — deliberately
# not rustls-tls: this workspace's other rustls users (relay, engine)
# thread an explicit ring provider through `_with_provider()` rather than
# ever installing a process-global default (see engine/src/tls.rs), and
# reqwest's high-level Client::builder() doesn't expose that hook. Safer to
# reuse the already-proven-to-build native-tls path for this one outbound
# HTTPS client than to guess at rustls feature-unification across sqlx's
# and reqwest's independent transitive pulls without being able to test-build
# it. Revisit if/when Twilio's Alpine/musl build needs it.
reqwest = { version = "0.12", features = ["json", "blocking"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
# T21 crash-isolation test only — never a normal/production dependency of
# this crate (T1's "directory never imports core/engine" is about the
# `[dependencies]` graph, not test-only tooling that proves the isolation).
engine.workspace = true
relay = { path = "../relay" }
tempfile = "3"
