[package]
name = "chat-ffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "chat_ffi"
# lib: for our own unit tests. cdylib/staticlib: what Gobley/UniFFI link into
# the KMP app (cdylib on Android/JVM, staticlib on iOS).
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
uniffi = "0.28"
thiserror.workspace = true
