[package]
name = "chat-ffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "chat_ffi"
# lib: for our own unit tests. cdylib/staticlib: what Gobley/UniFFI link into
# the KMP app (cdylib on Android/JVM, staticlib on iOS).
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
uniffi = "0.28"
thiserror.workspace = true
engine.workspace = true
proto.workspace = true
tokio.workspace = true
anyhow.workspace = true
# Same version as engine/'s so error downcasts see the same type.
base64 = "0.22"

[dev-dependencies]
relay = { path = "../relay" }
