[package]
name = "chat-ffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "chat_ffi"
# lib: for our own unit tests. cdylib/staticlib: what Gobley/UniFFI link into
# the KMP app (cdylib on Android/JVM, staticlib on iOS).
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
# Gobley 0.3.7 generates the Kotlin bindings and targets uniffi-rs 0.29.4
# exactly (external bindgens pin one uniffi version) — keep these in lockstep
# with app/gradle/libs.versions.toml.
uniffi = "=0.29.4"
thiserror.workspace = true
engine.workspace = true
proto.workspace = true
tokio.workspace = true
anyhow.workspace = true
# Same version as engine/'s so error downcasts see the same type.
base64 = "0.22"

[dev-dependencies]
relay = { path = "../relay" }
