[package]
name = "proto"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true
sha2 = "0.10"
rand = "0.8"
hmac = "0.12"
tokio = { version = "1", features = ["io-util"] }

[dev-dependencies]
proptest = "1"
