[package]
name = "relay"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "relay"
path = "src/main.rs"

[lib]
name = "relay"
path = "src/lib.rs"

[dependencies]
proto.workspace = true
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
