[package]
name = "relay"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "relay"
path = "src/main.rs"

[lib]
name = "relay"
path = "src/lib.rs"

[dependencies]
proto.workspace = true
# T27: verify directory-issued attestation tokens (type lives in proto).
ed25519-dalek = "2"
# T27: decode the base64 directory public key from relay config.
base64 = "0.22"
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
rand = "0.8"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rcgen = "0.13"
sha2 = "0.10"
# T9: bundled so operators need no system SQLite; the relay's whole state is
# one file next to its identity.
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
